# SHAMPUN

./: CMakeLists.txt  Dockerfile  Doxyfile  Jenkinsfile  README.md  Shampoo.cpp
.github/workflows/: cpp.yml  doc.yml  docker-publish.yml
docs/html/: _shampoo_8cpp.html  _shampoo_8cpp.js  doxygen_crawl.html  files.html  files_dup.js  globals.html  globals_func.html  md__r_e_a_d_m_e.html  navtreedata.js  navtreeindex0.js  pages.html
docs/html/search/: all_1.js  functions_0.js
docs/latex/: _shampoo_8cpp.tex  files.tex  md__r_e_a_d_m_e.tex  refman.tex
